# drf-exam

./: .gitignore  pyproject.toml  readme.md
tutorial/quickstart/: models.py  serializers.py  views.py
tutorial/quickstart/migrations/: 0001_initial.py
tutorial/tutorial/: asgi.py  settings.py  urls.py  wsgi.py
